Move params to .env

--- a/.env.dist
+++ b/.env.dist
@@ -4,6 +4,14 @@
 # Use real environment variables when deploying to production.
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
+### Event tracker parameter ###
+TRACKER_EVENT_LABEL=source_label
+###> core/tracker-budnle ###
+
+###> App storage dir ###
+STORAGE_DIR=/app/var/cache
+###< core/user-budnle ###
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=00b9a6234d40a5e224a79337ec74bbd2
