--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,6 @@ KERNEL_CLASS='App\Kernel'
 APP_SECRET='s$cretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:15672/%2f/messages
+# use custom storage dir like /app/var/cache
+STORAGE_DIR=/app/storage
+TRACKER_EVENT_LABEL=source_label
