Add new logic & add code fixers & fix codestyle.

--- a/.env.dist
+++ b/.env.dist
@@ -36,3 +36,7 @@ MAILER_URL=null://localhost
 ###> symfony/messenger ###
 MESSENGER_TRANSPORT_DSN=amqp://admin:password@172.26.0.2:5672//%2f/messages
 ###< symfony/messenger ###
+
+### core/anon ###
+ANON_COOKIE_NAME=anon_id
+###< core/anon ###
