--- a/.env.test
+++ b/.env.test
@@ -6,3 +6,4 @@ MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:15672/%2f/messages
 # use custom storage dir like /app/var/cache
 STORAGE_DIR=/app/storage
 TRACKER_EVENT_LABEL=source_label
+ANON_COOKIE_NAME=anon_id
