--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "symfony/web-link": "4.1.*",
     "symfony/yaml": "4.1.*",
     "ramsey/uuid": "^4.0@dev",
-    "symfony/messenger": "4.1.*"
+    "symfony/messenger": "4.1.*",
+    "friendsofphp/php-cs-fixer": "^2.14@dev"
   },
   "require-dev": {
     "symfony/debug-pack": "*",
@@ -34,7 +35,8 @@
     "symfony/maker-bundle": "^1.0",
     "symfony/profiler-pack": "*",
     "symfony/test-pack": "*",
-    "symfony/web-server-bundle": "4.1.*"
+    "symfony/web-server-bundle": "4.1.*",
+    "phpstan/phpstan": "^0.11.0@dev"
   },
   "autoload": {
     "psr-4": {
